# django-hide-admin

./: .gitignore  LICENSE  README.md  pyproject.toml  runtests.py  setup.cfg
.github/workflows/: ci.yml
hide_admin/: admin_site.py  apps.py
test_project/: test_settings.py
tests/: settings.py  test_admin_site.py
